k8s/infrastructure/controllers/argocd/http-route-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-webhook
  namespace: argocd
spec:
  parentRefs:
    - name: internal
      namespace: gateway
    - name: envoy-internal
      namespace: network
  hostnames:
    - "argocd.k8s.eudald.gr"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/webhook
      backendRefs:
        - name: argocd-server
          port: 80
